# adaptive-planner-env

./: .gitignore  ARCHITECTURE_REVIEW.md  BRANCH_WORKFLOW.md  DEPLOY_OPENENV.md  Dockerfile  Dockerfile.openenv  HACKATHON_CHECKLIST.md  HACKATHON_SUBMISSION.md  README.lifeops-env  README.md  SPACES_DEPLOY.md  Untitled  app.py  demo.py  lifeops-context.md  llm_agent.py  requirements-spaces.txt  requirements.txt
.github/workflows/: sync-to-hf-space.yml
agent/: __init__.py  llm_agent.py
app/: __init__.py  demo.py  gcal_client.py  week_view.py
env/: actions.py  baseline_agent.py  episode_trace.py  lifeops_env.py  personas.py  reward.py  scenario_generator.py
evaluation/: evaluate_agents.py
openenv_lifeops/: __init__.py  client.py  env_adapter.py  models.py  openenv.yaml  pyproject.toml
openenv_lifeops/server/: __init__.py  app.py  lifeops_environment.py
scripts/: colab_train_minimal.py  compare_agents.py  deploy_openenv.sh  install-pre-push-hook.sh  pre-push-hook  run_llm_training.sh  start_server.sh  step4_smoke.py  step4_smoke.pyºø  step4_smoke.pyºøççç  step6_llm.py  test_hf_token.py  test_parser.py
tests/: test_env.py  test_reward.py
training/: __init__.py  evaluate_agents.py  policy_improvement.py  q_learning_agent.py  train_q_agent.py  train_rl.py  training_log.json
